--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="container">
-            <img id="bannerimage" src="Graduation_group.png" alt="Graduation">
+            <img id="bannerimage" src="graduation_group.png" alt="Graduation">
         <div class="centered">YOU'RE ALREADY ACCEPTED!</div>
         </div>
         <h1>NEWS!</h1>
