--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--
         Project 2: Greendale Comminity Site
         Author: Johny Yim
-        Date: 3/28/2024
+        Date: 3/22/2024
 
         filename: home.html
     -->
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="index.html"><u>HOME</u></a></li>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">ADMIN & FACULTY</a></li>
                 <li><a href="#">NEWSLETTER</a></li>
                 <li><a href="#">ACADEMICS</a></li>
