--- a/enroll.html
+++ b/enroll.html
@@ -4,7 +4,7 @@
     <!--
         Project 2: Greendale Comminity Site
         Author: Johny Yim
-        Date: 3/28/2024
+        Date: 3/22/2024
 
         filename: enroll.html
     -->
@@ -19,8 +19,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">ADMIN & FACULTY</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="admin.html">ADMIN & FACULTY</a></li>
                 <li><a href="#">NEWSLETTER</a></li>
                 <li><a href="#">ACADEMICS</a></li>
                 <li class="rightli" style="float:right"><a href="#"><u>ENROLL</u></a></li>
