--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html"><u>HOME</u></a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="#">ADMIN & FACULTY</a></li>
+                <li><a href="admin.html">ADMIN & FACULTY</a></li>
                 <li><a href="#">NEWSLETTER</a></li>
                 <li><a href="#">ACADEMICS</a></li>
                 <li class="rightli" style="float:right"><a href="enroll.html">ENROLL</a></li>
