--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="home.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="index">
     <header>
         <img src="Greendale_Logo.png" alt="Greendale Font">
         <nav>
@@ -21,8 +21,6 @@
                 <li><a href="index.html"><u>HOME</u></a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="admin.html">ADMIN & FACULTY</a></li>
-                <li><a href="#">NEWSLETTER</a></li>
-                <li><a href="#">ACADEMICS</a></li>
                 <li class="rightli" style="float:right"><a href="enroll.html">ENROLL</a></li>
             </ul>
         </nav>
@@ -61,6 +59,7 @@
                 <em>MUST COMPLETE ALL 40 HOURS TO RECIEVE DEVICE.</em></div>
           </div>
     </div>
+
 </body>
 
 </html>
