--- a/enroll.html
+++ b/enroll.html
@@ -21,8 +21,6 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="admin.html">ADMIN & FACULTY</a></li>
-                <li><a href="#">NEWSLETTER</a></li>
-                <li><a href="#">ACADEMICS</a></li>
                 <li class="rightli" style="float:right"><a href="#"><u>ENROLL</u></a></li>
             </ul>
         </nav>
@@ -31,7 +29,7 @@
         </div>
         <br>
     </header>
-    
+<div class="application-group">   
     <form id="enroll" method="post">
     <fieldset id="Leftside">
         <legend>Application</legend>
@@ -164,12 +162,13 @@
 
     </fieldset>
 
-    <div id="buttons">
+    <div class="buttons">
         <input type="submit" value="Submit Application!">
         <input type="reset" value="Cancel">
     </div>
 
     </form>
+</div> 
 </body>
 
 </html>
