--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,6 @@
     -->
     <meta charset="utf-8">
     <title>Greendale Community College</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="home.css" rel="stylesheet">
     
 </head>
@@ -23,54 +22,83 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="admin.html"><u>ADMIN & FACULTY</u></a></li>
-                <li><a href="#">NEWSLETTER</a></li>
-                <li><a href="#">ACADEMICS</a></li>
                 <li class="rightli" style="float:right"><a href="enroll.html">ENROLL</a></li>
             </ul>
         </nav>
         <div class="container">
             <img id="bannerimage" src="staff.png" alt="staff">
         </div>
+        <h1>Introducing our amazing staff!</h1>
     </header>
     
-    <div class="card-group">
-        <div class="card">
-          <img src="ben_chang2.webp" class="card-img-top" alt="ben">
-          <div class="card-body">
-            <h5 class="card-title">Ben Chang</h5>
-            <p class="card-text">Ben Franklin Chang, is a long time employee 
-                of Greendale Community College who has worked at the school in various capacities. His known 
-                family includes a mother who refused to breast feed him as a child, a deceased twin sister 
-                named Connie whom he claimed to have eaten in utero and a brother known only as Rabbi Chang.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
+    <div class="profile">
+        <div class="profile-image">
+            <img class="profile-image" src="craig_pelton2.webp">
         </div>
-        <div class="card">
-          <img src="craig_pelton2.webp" class="card-img-top" alt="dean">
-          <div class="card-body">
-            <h5 class="card-title">Craig Pelton</h5>
-            <p class="card-text">Craig Isidore Pelton is the current Dean of Greendale Community College. 
-                He is a graduate of Appomattox University and holds a Bachelor of Education degree. Pelton 
-                has worked in Scholastics for over 10 years, although his résumé could be seen as a poor 
-                reflection of this as all his previous places of employment have since shut down. At Greendale 
-                he is a well meaning but bumbling administrator who is just barely able to run the school.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="Frankie_Dart.webp" class="card-img-top" alt="frankie">
-          <div class="card-body">
-            <h5 class="card-title">Frankie Dart</h5>
-            <p class="card-text">Francesca "Frankie" Dart is a consultant who was hired to whip Greendale 
-                into shape. Frankie claims to be a part of a large family full of quirky and eccentric people 
-                which includes a relative she moved to Greendale for to look after. She acknowledges and embraces 
-                her boring persona and has a take charge attitude which rubs people the wrong way.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
+        <div class="profile-info">
+            <p><strong class="profile-name">Craig Pelton</strong><br>
+                Pelton is the Dean of Greendale Community College. He is a graduate of Appatomax 
+                University and holds a Bachelors of Educations degree. Pelton has worked in 
+                Scholastics for over 10 years although his résumé could be seen as a poor reflection 
+                of this since all his previous places of employment have since shut down.
+            </p>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+        </div>
+    </div>
+
+    <div class="profile">
+        <div class="profile-image">
+            <img class="profile-image" src="Frankie_Dart.webp">
+        </div>
+        <div class="profile-info">
+            <p><strong class="profile-name">Francesca "Frankie" Dart</strong><br>
+                Frankie is a consultant hired to help improve Greendale. She may look like the lady from 
+                the IT department but thats just a coincidence that they look alike. Please stop asking. Unless 
+                you need help with your time at Greendale, then please reach out to Ms. Dart.
+            </p>
+
+        </div>
+    </div>
+
+    <div class="profile">
+        <div class="profile-image">
+            <img class="profile-image" src="ben_chang2.webp">
+        </div>
+        <div class="profile-info">
+            <p><strong class="profile-name">Ben Franklin Chang</strong><br>
+                Once the spanish instructor, turned student, turned security gaurd, turned dictator, turned 
+                amnesiac, turned student again. Ben has had a long and rather confusing history here at Greendale 
+                but we do appreciate his teaching abilities.
+            </p>
+
+        </div>
+    </div>
+    <div class="profile">
+        <div class="profile-image">
+            <img class="profile-image" src="johngoodman.jpg">
+        </div>
+        <div class="profile-info">
+            <p><strong class="profile-name">Vice Dean Robert Laybourne</strong><br>
+                head of Greendale's air conditioner repair annex and the real power behind Greendale. When Dean 
+                Pelton decides to confront Laybourne over the annex 
+                purchasing an espresso machine, Laybourne shows him that the air conditioning annex is the 
+                primary source of Greendale's funding. He thus holds complete power over the dean's office. 
+            </p>
+
+        </div>
+    </div>
+
+    <div class="profile">
+        <div class="profile-image">
+            <img class="profile-image" src="custodian.webp">
+        </div>
+        <div class="profile-info">
+            <p><strong class="profile-name">Jerry Minor</strong><br>
+                Head janitor at Greendale. We dont know much about him but he loves cleaning up paint.
+            </p>
+
+        </div>
+    </div>
+    </body>
 
 </html>
