--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     -->
     <meta charset="utf-8">
     <title>Greendale Community College</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="home.css" rel="stylesheet">
     
 </head>
@@ -23,8 +22,6 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html"><u>ABOUT</u></a></li>
                 <li><a href="admin.html">ADMIN & FACULTY</a></li>
-                <li><a href="#">NEWSLETTER</a></li>
-                <li><a href="#">ACADEMICS</a></li>
                 <li class="rightli" style="float:right"><a href="enroll.html">ENROLL</a></li>
             </ul>
         </nav>
@@ -32,67 +29,23 @@
             <img id="bannerimage" src="aboutimg.png" alt="about img">
         </div>
     </header>
-    
-    <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Founder of Greendale
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                In the 1970's, computer genius <strong>Russell Borchert</strong> created the 9 track cassette player. The 8 track cassette industry bribed him to 
-                prevent it from being manufactured and Russell became a millionaire. In 1974 he used the money to found a technological institute, 
-                the "Greendale Computery College". He then began a project to create a computer which could process human emotion. Russell used gold 
-                for the circuitry believing it to be a better conductor for emotions. His overt physical displays of affection for the machine he 
-                built created a scandal at the school. 
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              History of Greendale
-            </button>
-          </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                The land upon which Greendale Community College would eventually be built was originally the site of an animal rendering 
-                plant. In 1974, inventor <strong>Russell Borchert</strong> purchased the grounds and founded a technological institute known as the 
-                "Greendale Computery College". The school's first head administrator was <strong>Dean Pizzini</strong> who had to deal with a scandal the 
-                following year that almost shut down the college. This involved Borchert and his unnatural love for his computer science 
-                experiment. Borchert was believed to have died from a "computer virus" so Dean Pizzini sealed off Borchert's computer lab 
-                in case an actual contagion was involved. The city purchased the campus in the aftermath turning it into a traditional 
-                community college.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Notable Alumni
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                <strong>Jeff Winger</strong> Criminal defence lawyer<br>
-                <strong>Shirley Bennett</strong> Business owner "Shirley's Sandwich"<br>
-                <strong>Troy Barnes</strong> Millionaire<br>
-                <strong>Pierce Hawthorne</strong> Hawthorne Wipes Nepo Baby<br>
-                <strong>Luis Guzman</strong> Actor<br>
-                <strong>Ruffles</strong> Good boy<br>
-                <strong></strong><br>
-                <strong></strong><br>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="bottom-page">
+    <div class="founder-img">
+        <img class="founder-img-box"  src="founder.png" alt="founder-img">
+    </div>
+    <div class="facts">
+        <p>
+            In the 1970's, computer genius <strong>Russell Borchert</strong> created the 9 track cassette player. 
+            The 8 track cassette industry bribed him to prevent it from being manufactured and Russell 
+            became a millionaire. In 1974 he used the money to found a technological institute, the 
+            "Greendale Computery College". He then began a project to create a computer which could process 
+            human emotion. Russell used gold for the circuitry believing it to be a better conductor for 
+            emotions. His overt physical displays of affection for the machine he built created a scandal 
+            at the school. To spare his institution any embarrassment he willingly let Greendale's first 
+            Dean seal him and the entire computer lab off from the rest of the campus.</p>
+    </div>
+</div>
 
-      <div class="founder">
-      <img src="founder.png" alt="founder">
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    </body>
 
 </html>
